# kbmod_logger

./: CMakeLists.txt  setup.py
kbmod_logger/: __init__.py  module1.py  module2.py
src/: logger.cpp  logger_bindings.cpp  logging.h
tests/: Makefile  cpp_test.cpp  cpp_test.out  test_logger.py
